--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "@hapi/inert": "^7.0.0",
     "@hapi/joi": "^17.1.1",
+    "hapi-geo-locate": "^4.1.1",
     "joi": "^17.6.3"
   }
 }
